# kiaa2_sudoku_solver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  icon.qrc  main.cpp  solvethread.cpp  solvethread.hpp  sudokuboard.cpp  sudokuboard.hpp  sudokucell.cpp  sudokucell.hpp
dlx/: CMakeLists.txt  test.cpp
dlx/inc/: dlx.hpp  node.hpp
dlx/src/: dlx.cpp  node.cpp
docs/: Makefile  dancing_links_petar_djordjevic.tex  seminarski.bib
solver/: CMakeLists.txt  benchmark.cpp  test.cpp
solver/inc/: board.hpp  solver.hpp
solver/src/: board.cpp  solver.cpp
